--- a/3/CakeExtracter.ConsoleApplication/packages.config
+++ b/3/CakeExtracter.ConsoleApplication/packages.config
@@ -6,6 +6,7 @@
   <package id="Microsoft.Bcl.Async" version="1.0.168" targetFramework="net45" />
   <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="net45" />
   <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="net45" />
+  <package id="Microsoft.Web.WebJobs.Publish" version="1.0.3" targetFramework="net45" />
   <package id="NDesk.Options" version="0.2.1" targetFramework="net45" />
   <package id="Quartz" version="2.1.2" targetFramework="net45" />
 </packages>
