Percents Summary, by month

--- a/3/DirectAgents.Web/DirectAgents.Web/DirectAgents.Web.csproj
+++ b/3/DirectAgents.Web/DirectAgents.Web/DirectAgents.Web.csproj
@@ -1071,6 +1071,7 @@
     <Content Include="Areas\ProgAdmin\Views\ExtAccounts\AdSets.cshtml" />
     <Content Include="Areas\ProgAdmin\Views\Actions\Types.cshtml" />
     <Content Include="Areas\ProgAdmin\Views\Stats\Action.cshtml" />
+    <Content Include="Areas\ProgAdmin\Views\Advertisers\Percents.cshtml" />
     <None Include="Properties\PublishProfiles\biz-test.pubxml" />
     <None Include="Properties\PublishProfiles\biz.pubxml" />
     <Content Include="Views\Shared\EditorTemplates\Date.cshtml" />
