Adform API - alternate credentials

--- a/3/CakeExtracter.ConsoleApplication/App.config
+++ b/3/CakeExtracter.ConsoleApplication/App.config
@@ -205,6 +205,9 @@
     <add key="AdformAuthBaseUrl" value="https://id.adform.com/sts/connect/token" />
     <add key="AdformClientID" value="portal.directagents.us@clients.adform.com" />
     <add key="AdformClientSecret" value="zA6Fn7PEFk103Vf2FV93NzP66d2411QHL817m7B54B" />
+    <add key="Adform_Alt1" value="147033,148569,148570,148571" /><!-- Shutterstock(4) -->
+    <add key="AdformClientID_Alt1" value="portal.shutterstock.us@clients.adform.com" />
+    <add key="AdformClientSecret_Alt1" value="s4WManLlRkkXbjWPv_YUPGnd0bv-gFha9JScGDVV" />
     <add key="AdformBaseUrl" value="https://api.adform.com" />
 
     <add key="AppleBaseUrl" value="https://api.searchads.apple.com/api/v1/" />
