ExtAccount.Filter -> FB Campaign name filter

--- a/1/DirectAgents.Domain/DirectAgents.Domain.csproj
+++ b/1/DirectAgents.Domain/DirectAgents.Domain.csproj
@@ -477,6 +477,10 @@
     <Compile Include="MigrationsTD\201709082010188_Mig_CampFeeAdvEnd.Designer.cs">
       <DependentUpon>201709082010188_Mig_CampFeeAdvEnd.cs</DependentUpon>
     </Compile>
+    <Compile Include="MigrationsTD\201710162039159_Mig_AccountFilter.cs" />
+    <Compile Include="MigrationsTD\201710162039159_Mig_AccountFilter.Designer.cs">
+      <DependentUpon>201710162039159_Mig_AccountFilter.cs</DependentUpon>
+    </Compile>
     <Compile Include="MigrationsTD\Configuration.cs" />
     <Compile Include="Migrations\201405292045335_InitialCreate.cs" />
     <Compile Include="Migrations\201405292045335_InitialCreate.Designer.cs">
@@ -805,6 +809,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="MigrationsTD\201709082010188_Mig_CampFeeAdvEnd.resx">
       <DependentUpon>201709082010188_Mig_CampFeeAdvEnd.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MigrationsTD\201710162039159_Mig_AccountFilter.resx">
+      <DependentUpon>201710162039159_Mig_AccountFilter.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201405292045335_InitialCreate.resx">
       <DependentUpon>201405292045335_InitialCreate.cs</DependentUpon>
