--- a/1/EomTool/EomToolWeb/packages.config
+++ b/1/EomTool/EomToolWeb/packages.config
@@ -22,6 +22,7 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net40" />
   <package id="Modernizr" version="2.5.3" targetFramework="net40" />
   <package id="Moq" version="4.0.10827" targetFramework="net40" />
+  <package id="morelinq" version="1.0.16006" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net45" />
   <package id="Ninject" version="3.0.1.10" targetFramework="net45" />
   <package id="Ninject.Extensions.Interception" version="3.0.0.8" targetFramework="net45" />
