--- a/1/EomTool/EomTool.Domain/EomTool.Domain.csproj
+++ b/1/EomTool/EomTool.Domain/EomTool.Domain.csproj
@@ -75,7 +75,7 @@
     <Compile Include="DTOs\AuditSummary.cs" />
     <Compile Include="DTOs\CampAffId.cs" />
     <Compile Include="DTOs\CampaignAmount.cs" />
-    <Compile Include="Entities\AccountManagerTeam.cs">
+    <Compile Include="Entities\AccountManager.cs">
       <DependentUpon>EomModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Entities\AdManager.cs">
