--- a/3/DirectAgents.Web/DirectAgents.Web/Web.config
+++ b/3/DirectAgents.Web/DirectAgents.Web/Web.config
@@ -38,9 +38,9 @@
     <!--<add key="BudgetAlerts_TestEmail" value="kevin@directagents.com" />-->
     <add key="BudgetAlerts_TestEmail" value="" />
     <add key="BudgetAlerts_Email" value="mediabuyers@directagents.com" />
-    <!-- DISABLE ON AZURE? -->
-    <add key="SSRS_ReportServerUrl" value="http://biz/ReportServer_SQLEXPRESS" />
-    <!--<add key="SSRS_ReportServerUrl" value="" />-->
+    <!--  ENABLE IF PUBLISHING TO BIZ/DATAPIPE -->
+    <!--<add key="SSRS_ReportServerUrl" value="http://biz/ReportServer_SQLEXPRESS" />-->
+    <add key="SSRS_ReportServerUrl" value="" />
     <add key="SSRS_ReportServerUsername" value="" />
     <add key="SSRS_ReportServerPassword" value="" />
     <!-- APIs -->
@@ -65,9 +65,9 @@
     <add key="FacebookApiVersion" value="2.9" />
     <add key="FB_DailyStatsOnly" value="942394955820248,101672655" /><!-- Glamsquad,Zeel -->
     <add key="FB_ConversionsAsMobileAppInstalls" value="1641397412783742,101672655,1618450965145197,1422222644472180,171116086713616" /><!-- Didit,Zeel,Pongalo,PEN,Nosey -->
-    <add key="FB_ConversionsAsPurchases" value="580522202120266,958472597545817,105894915,1244370672289340,169435073491736,10153692856642557,1389007494496139,1414035381993350,1414037158659839,1414039745326247" />
-    <!-- Vi,Bevel,Pimsleur,RollingStone,CovenantHouse,Catbird, Eaglemoss-...STGraphicNovel,StarTrekRegularShips,WalkingDead,eCommerceShop -->
-    <add key="FB_ConversionsAsRegistrations" value="608703712617562" /><!-- LiquidSpace -->
+    <add key="FB_ConversionsAsPurchases" value="105894915,169435073491736,10153692856642557,1389007494496139,1414035381993350,1414037158659839,1414039745326247" />
+    <!-- Pimsleur,CovenantHouse,Catbird, Eaglemoss-(STGraphicNovel,StarTrekRegularShips,WalkingDead,eCommerceShop) -->
+    <add key="FB_ConversionsAsRegistrations" value="764183110401682" /><!-- FirstLook -->
     <add key="FB_ConversionsAsVideoPlays" value="445900432262095" /><!-- M2M -->
     <add key="FB_7d_click" value="127272435" /><!-- Jackson Galaxy -->
 
@@ -127,7 +127,7 @@
   -->
   <system.web>
     <customErrors mode="Off" />
-    <httpRuntime targetFramework="4.5" />
+    <httpRuntime targetFramework="4.5" executionTimeout="240" />
     <compilation debug="true" targetFramework="4.5.2" />
     <pages>
       <namespaces>
