updating code with Daily and Campaign data collection

--- a/3/DirectAgents.Web/Amazon/Amazon.csproj
+++ b/3/DirectAgents.Web/Amazon/Amazon.csproj
@@ -67,6 +67,8 @@
   <ItemGroup>
     <Compile Include="AmazonAuth.cs" />
     <Compile Include="AmazonUtility.cs" />
+    <Compile Include="Entities\AmazonCampaign.cs" />
+    <Compile Include="Entities\AmazonDailySummary.cs" />
     <Compile Include="HelperClasses.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
