azure app settings

--- a/3/CakeExtracter.ConsoleApplication/App.config
+++ b/3/CakeExtracter.ConsoleApplication/App.config
@@ -9,6 +9,7 @@
   <connectionStrings>
     <add name="ClientPortalContext" connectionString="metadata=res://*/Contexts.ClientPortal.csdl|res://*/Contexts.ClientPortal.ssdl|res://*/Contexts.ClientPortal.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=biz\sqlexpress;initial catalog=ClientPortal;user id=sa;password=sp0ngbOb;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
     <!--<add name="ClientPortalContext" connectionString="metadata=res://*/Contexts.ClientPortal.csdl|res://*/Contexts.ClientPortal.ssdl|res://*/Contexts.ClientPortal.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=173.204.123.91,1433;initial catalog=ClientPortal;user id=sa;password=sp0ngbOb;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
+    <!--<add name="ClientPortalContext" connectionString="metadata=res://*/Contexts.ClientPortal.csdl|res://*/Contexts.ClientPortal.ssdl|res://*/Contexts.ClientPortal.msl;provider=System.Data.SqlClient;provider connection string=&quot;Server=tcp:daazure1.database.windows.net,1433;Initial Catalog=DirectAgents1;Persist Security Info=False;User ID=daadmin;Password=bObsp0ng;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
     <add name="ClientPortalDWContext" connectionString="metadata=res://*/Contexts.ClientPortalDW.csdl|res://*/Contexts.ClientPortalDW.ssdl|res://*/Contexts.ClientPortalDW.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=biz\sqlexpress;initial catalog=ClientPortalDW;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
     <!--<add name="ClientPortalDWContext" connectionString="metadata=res://*/Contexts.ClientPortalDW.csdl|res://*/Contexts.ClientPortalDW.ssdl|res://*/Contexts.ClientPortalDW.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=173.204.123.91,1433;initial catalog=ClientPortalDW;user id=sa;password=sp0ngbOb;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
     <add name="CakeTrafficContext" connectionString="data source=biz\sqlexpress;initial catalog=CakeTraffic;user id=sa;password=sp0ngbOb;" providerName="System.Data.SqlClient" />
@@ -68,12 +69,13 @@
     <!--<add key="BudgetAlerts_TestEmail" value="kevin@directagents.com" />-->
     <add key="BudgetAlerts_Email" value="mediabuyers@directagents.com,search@directagents.com,kevin@directagents.com" />
 
-    <add key="PATH_Search" value="C:\DA\portal\search" />
+    <add key="PATH_Search" value="C:\DA\portal\search" /><!-- change for azure-web (excel reps) -->
 
     <add key="CakeApiKey" value="FCjdYAcwQE" />
     <add key="ClientSettingsProvider.ServiceUri" value="" />
 
     <add key="AdWordsReportFilePath" value="C:\Downloads\adwordsrep.xml" />
+    <!--<add key="AdWordsReportFilePath" value="d:\local\adwordsrep.xml" />--><!-- azure -->
 
     <add key="BingCustomerID" value="234647" />
     <add key="BingApiToken" value="006XNV7E81834904" /><!--"EW65911AO"-->
@@ -90,6 +92,7 @@
 
     <add key="BingRedirectionUri" value="https://login.live.com/oauth20_desktop.srf" />
     <add key="BingReportFolder" value="C:\Downloads" />
+    <!--<add key="BingReportFolder" value="d:\local" />--><!-- azure -->
     <add key="BingReportFilename" value="bingrep.zip" />
 
     <add key="CriteoUsername_Folica" value="criteo_folica_api" />
@@ -172,6 +175,7 @@
 
     <add key="AppleBaseUrl" value="https://api.searchads.apple.com/api/v1/" />
     <add key="AppleP12Location" value="C:\DA\portal\API\AppleCertificate{0}.p12" />
+    <!--<add key="AppleP12Location" value="d:\home\DA\portal\API\AppleCertificate{0}.p12" />--><!-- azure -->
     <add key="AppleP12Password" value="appleda1" />
 
     <add key="TD_SiteStats_ImpressionThreshold" value="100" /><!-- min # of impressions (n/a if conversions>0) -->
