amzn- allow multiple AuthCode/Access/RefreshTokens

--- a/3/CakeExtracter.ConsoleApplication/App.config
+++ b/3/CakeExtracter.ConsoleApplication/App.config
@@ -70,8 +70,10 @@
     <add key="AmazonAuthorizeUrl" value="https://www.amazon.com/ap/oa" />
     <add key="AmazonTokenUrl" value="https://api.amazon.com/auth/o2/token" />
     <add key="AmazonClientUrl" value="https://portal.directagents.com" />
-    <add key="AmazonAccessCode" value="ANyvcToCyYtvRsPgWwaR" /><!-- granted access to ronnie's account -->
+    <add key="AmazonAuthCode" value="ANyvcToCyYtvRsPgWwaR" /><!-- granted access to ronnie's account -->
     <add key="AmazonRefreshToken" value="" />
+    <add key="Amazon_Alt1" value="3697485300977692" /><!-- AvoDerm -->
+    <add key="AmazonAuthCode_Alt1" value="ANIxnrbjMDzBPhYGvHwx" /><!-- granted access to brendan's account -->
     <!--Amazon Advertising Access - FINISH-->
     
     <add key="GmailEmailer_Username" value="portal@directagents.com" />
